--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ SEOTitle: G的博客 | Hux Blog
 header-img: img/home-bg.jpg
 email: 114514@gmail.com
 description: "这里是 G 的个人博客"
-keyword: "Web, JavaScript, React, React Native, 前端, 设计"
+keyword: "student"
 url: "https://huangxuan.me" # your host, for absolute URL
 baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
 
@@ -13,10 +13,9 @@ future: true
 
 # SNS settings
 RSS: false
-weibo_username: huxpro
-zhihu_username: huxpro
-github_username: huxpro
-twitter_username: huxpro
+zhihu_username: 1
+github_username: glacheysist
+twitter_username: 1
 #facebook_username:  huxpro
 #linkedin_username:  firstname-lastname-idxxxx
 
