--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ ga_domain: huangxuan.me
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
 sidebar-about-description: "我要睡觉 <br> 2024"
-sidebar-avatar: https://https://github.com/Glacheysist/photo/blob/main/20020351_p0.jpg # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: https://github.com/Glacheysist/photo/blob/main/20020351_p0.jpg # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
 featured-tags: true # whether or not using Feature-Tags
