--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ twitter_username: 1
 # from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
 highlighter: rouge
 permalink: pretty
-paginate: 10
+paginate: 5
 exclude:
   [
     "less",
@@ -58,7 +58,7 @@ kramdown:
       start_line: 1
 
 # Disqus settings
-disqus_username: hux
+disqus_username: false
 
 # Netease settings
 netease_comment: false
