--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: G Blog
-SEOTitle: G的博客 | Hux Blog
+SEOTitle: G的博客 | G Blog
 header-img: img/home-bg.jpg
 email: 114514@gmail.com
 description: "这里是 G 的个人博客"
